2001-10-05  Mads Bondo Dydensborg  <madsdyd@dydensborg.dk>

	* Paddle
	Moved the paddle to the gamestate, where it belongs
	Due to some weirdness in the collision detection code, 
	it was neccesary to fixate one of the moving ovals.

2001-10-04  Mads Bondo Dydensborg  <madsdyd@dydensborg.dk>

	* Version 0.0.6
	Jonas have added paths, motion, bounding boxes and simple
	collision detection. No comments, though :-)
	I added some more autoconf voodoo to fix embedding python, and a
	beginning of map loading.
	Tagging this is version 0.0.6

2001-09-28  Mads Bondo Dydensborg  <madsdyd@dydensborg.dk>

	* Interprenter
	Added first shot at Pythin support. The autotools are probably
	flaky like hell. But, it sort of works, unless you tie uo the
	interprenter for too long, in which case yanoid crashes horribly.

2001-09-27  Mads Bondo Dydensborg  <madsdyd@dydensborg.dk>

	* Various
	Made sure everything compiles, all stuff is included in installs,
	and distributions. 
	Made the console stuff from Jones be path independent.
	Jonas hava also added support for mod and ogg files, 
	and performs some tricky stuff with libtool! (gaderespekt).
	Tagging this as 0.0.4

2001-09-26  Mads Bondo Dydensborg  <madsdyd@dydensborg.dk>

	* Map
	Added a map class. Changed the entity to load a small 
	brick. Added some info about the videomode flags.

2001-09-25  Mads Bondo Dydensborg  <madsdyd@dydensborg.dk>

	* Design
	Added a couple of design documents. 
	Added entity, game, display and client files.
	Display a smooth moving logo on screen.
	Tagging version 0.0.3

2001-09-24  Mads Bondo Dydensborg  <madsdyd@dydensborg.dk>

	* RessourceManager
	First shot at a ressourcemanager. Loads SDL_Surfaces.
	The stuff about THandle may be a big mistake.
	Removed it.
	Tagging version 0.0.2

2001-09-22  Mads Bondo Dydensborg  <mads@dydensborg.dk>

	* (Everything)
	Made initial project, with autoconf support.
	Created cvs repository. 
	Tagging first version (0.0.1)
